k8s/traefik/metrics/traefik-metrcis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
  ports:
  - name: metrics
    port: 9100
    targetPort: 9100
  type: ClusterIP
