k8s/traefik/metrics/traefik-metrics-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-metrics
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: traefik-metrics.cutemiya.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-metrics
            port:
              number: 9100
  tls:
  - hosts:
    - traefik-metrics.cutemiya.ru
    secretName: traefik-metrics-cutemiya-ru-tls
